[package]
name = "act_rs_async_traits_test"
version = "0.1.0"
edition = "2021"

[dependencies]
#act_rs = { version = "0.2.0", features = ["tokio"] }
act_rs = { path="../act_rs" , features = ["tokio"] }
tokio = { version = "1.*", features = ["rt", "rt-multi-thread", "sync", "macros"] }
async-trait = "0.1.*"
corlib = "0.2.0"
paste = "1.0.*"

